Fixed some typos

--- a/datenschutz.html
+++ b/datenschutz.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 				<header id="header" class>
-					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
+					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> KidsDay Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
 					</nav>
@@ -27,9 +27,9 @@
 					<div class="inner">
 						<h2>Menü</h2>
 						<ul class="links">
-							<li><a href="index.html">Willkommen beim Kidsday</a></li>
+							<li><a href="index.html">Willkommen beim KidsDay</a></li>
 							<li><a href="infos.html">Informationen</a></li>
-							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
+							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
@@ -56,7 +56,7 @@
 									</article>
 									<article>
 										<h3>Zweck dieser Website / Keine Gewährleistung</h3>
-										<p>Der Zweck dieser Website ist die Informationsvermittlung über unsere Dienstleistungen. Durch das Aufrufen dieser Website durch den Benutzer geht die Nehemia Initiative e.V. mit dem Benutzer keinerlei vertragliche Beziehung ein. Die Nehemia Initiative bemüht sich, die Inhalte auf dieser Website aktuell, vollständig und richtig zu halten. Da diese Informationen jedoch raschen Änderungen unterliegen können, kann die Aktualität, Richtigkeit und Vollständigkeit nicht vollständig gewährleistet werden. Die Angaben auf dieser Website stellen keine verbindlichen Entscheidungshilfen und Antworten auf Beratungsfragen dar. Jegliches Handeln, welches aufgrund der Angaben auf dieser Website getroffen wird, erfolgt auf das alleinige Risiko des Benutzers.</p>
+										<p>Der Zweck dieser Website ist die Informationsvermittlung über unsere Dienstleistungen. Durch das Aufrufen dieser Website durch den Benutzer geht die Nehemia Initiative Karlsruhe e.V. mit dem Benutzer keinerlei vertragliche Beziehung ein. Die Nehemia Initiative bemüht sich, die Inhalte auf dieser Website aktuell, vollständig und richtig zu halten. Da diese Informationen jedoch raschen Änderungen unterliegen können, kann die Aktualität, Richtigkeit und Vollständigkeit nicht vollständig gewährleistet werden. Die Angaben auf dieser Website stellen keine verbindlichen Entscheidungshilfen und Antworten auf Beratungsfragen dar. Jegliches Handeln, welches aufgrund der Angaben auf dieser Website getroffen wird, erfolgt auf das alleinige Risiko des Benutzers.</p>
 									</article>
 									<article>
 										<h3>Funktionen dieser Website</h3>
@@ -87,18 +87,18 @@
 					<div class="inner">
 						<ul class="contact">
 							<li class="fa-home">
-								Kidsday Karlsruhe<br />
+								KidsDay Karlsruhe<br />
 								Winterstraße 29<br />
 								76137 Karlsruhe
 							</li>
-							<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
-							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+							<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
+							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
 							<li class="fa-institution">
-								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
 								<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
