--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Kidsday Karlsruhe</title>
+		<title>KidsDay Karlsruhe</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
+						<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> KidsDay Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 						<nav>
 							<a href="#menu">Menü</a>
 						</nav>
@@ -27,9 +27,9 @@
 						<div class="inner">
 							<h2>Menü</h2>
 							<ul class="links">
-								<li><a href="index.html">Willkommen beim Kidsday</a></li>
+								<li><a href="index.html">Willkommen beim KidsDay</a></li>
 								<li><a href="infos.html">Informationen</a></li>
-								<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
+								<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 								<li><a href="bilder.html">Bilder</a></li>
 								<li><a href="spenden.html">Spenden</a></li>
 							</ul>
@@ -43,7 +43,7 @@
 							<h2><center>Willkommen beim:</center></h2>
 							<!--<div class="logo"><img alt="logo" src="assets/css/images/hand_blau.svg" width="64" height="64"><img alt="logo" src="assets/css/images/hand_gruen.svg" width="64" height="64"></div>-->
 							<h2><center><a href="#"><img alt="logo" src="assets/css/images/Logo_alt.png" height="196"></a></center></h2>
-							<center<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></p></center>
+							<center<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></p></center>
 							<!--<img src="assets/css/images/nehemia_logo.svg" width="152" height="64">-->
 						</div>
 					</section>
@@ -56,14 +56,14 @@
 								<div class="inner">
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>-->
 									<div class="content">
-										<h2 class="major">Wann wird der nächste Kidsday stattfinden?</h2>
-										<p>Der nächste Kidsday findet am 20.05.2017,
+										<h2 class="major">Wann wird der nächste KidsDay stattfinden?</h2>
+										<p>Der nächste KidsDay findet am 20.05.2017,
 											in <script>var eventdate = new Date("May 20, 2017 12:00:00 GMT");
                                             d=new Date();
                                             count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                             count=Math.floor(count/(60*60*24));
                                             document.write(count);</script> Tagen, <br>
-											in der Winterstraße 29, Karlsruhe Südstadt statt.</p>
+											in der Winterstraße 29, 76137 Karlsruhe statt.</p>
 										<a href="wannwo.html" class="special">Location</a>
 									</div>
 								</div>
@@ -74,7 +74,7 @@
 								<div class="inner">
 									<a href="bilder.html" class="image"><img src="assets/css/images/climber.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Bilder der letzten Kidsdays:</h2>
+										<h2 class="major">Bilder der letzten KidsDays:</h2>
 										<p>Vielleicht findet ihr euch wieder?</p><a href="bilder.html" class="special">Hier lang!</a>
 									</div>
 								</div>
@@ -86,9 +86,9 @@
 									<a href="infos.html" class="image"><img src="assets/css/images/pencilbox.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Infos</h2>
-										<p>Ihr fragt euch sicher: <i>"Was ist denn bitte der Kidsday?"</i><br>
-										Nunja, diese Frage ist recht einfach zu beantworten. Der Kidsday DICH ganz herzlich ein! <br>
-											Der Kidsday ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Südstadt, Winterstraße 29, an einem Samstag statt.</p>
+										<p>Ihr fragt euch sicher: <i>"Was ist denn bitte der KidsDay?"</i><br>
+										Nun ja, diese Frage ist recht einfach zu beantworten. Der KidsDay lädt DICH ganz herzlich ein! <br>
+											Der KidsDay ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Karlsruher Südstadt, Winterstraße 29, an einem Samstag statt.</p>
 										<a href="infos.html" class="special">Weiterlesen</a>
 									</div>
 								</div>
@@ -118,21 +118,21 @@
 						<div class="inner">
 							<ul class="contact">
 								<li class="fa-home">
-									Kidsday Karlsruhe<br />
+									KidsDay Karlsruhe<br />
 									Winterstraße 29<br />
 									76137 Karlsruhe
 								</li>
 								<!--<li class="fa-phone">(000) 000-0000</li>-->
-								<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
+								<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
 								<!--<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>-->
-								<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+								<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
 								<!--<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
 								<li class="fa-institution">
-								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
 									<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+								<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 								<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 								<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 							</ul>
