--- a/infos.html
+++ b/infos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Was ist der Kidsday?</title>
+		<title>Was ist der KidsDay?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 				<header id="header" class>
-					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
+					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> KidsDay Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
 					</nav>
@@ -27,9 +27,9 @@
 					<div class="inner">
 						<h2>Menü</h2>
 						<ul class="links">
-							<li><a href="index.html">Willkommen beim Kidsday</a></li>
+							<li><a href="index.html">Willkommen beim KidsDay</a></li>
 							<li><a href="infos.html">Informationen</a></li>
-							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
+							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
@@ -41,7 +41,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Was ist der Kidsday?</h2>
+								<h2>Was ist der KidsDay?</h2>
 								<p>Ein toller Tag für Kinder!</p>
 							</div>
 						</header>
@@ -51,29 +51,29 @@
 								<div class="inner">
 									<a href="#" class="image"><img src="assets/css/images/bearface.jpg" alt="" /></a>
 									<div class="content">
-									<h3>Ihr fragt euch sicher: <i>"Was ist denn bitte der Kidsday?"</i></h3>
-										<p>Nun ja, diese Frage ist recht einfach zu beantworten. Der Kidsday lädt DICH ganz herzlich ein! <br>
-										Der Kidsday ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Südstadt, Winterstraße 29, an einem Samstag statt.</p>
+									<h3>Ihr fragt euch sicher: <i>"Was ist denn bitte der KidsDay?"</i></h3>
+										<p>Nun ja, diese Frage ist recht einfach zu beantworten. Der KidsDay lädt DICH ganz herzlich ein! <br>
+										Der KidsDay ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Karlsruher Südstadt, Winterstraße 29, an einem Samstag statt.</p>
 									<p>Du kannst gespannt sein, was DICH erwartet:</p>
-									<li>Wir treffen uns zumeist alle gemeinsam, um zu singen, zu tanzen, Geschichten zu hören.</li>
+									<li>Wir treffen uns zuerst alle gemeinsam, um zu singen, zu tanzen und um eine Geschichte zu hören.</li>
 									<li>Dann stehen ein leckeres Mittagessen und einige Spiele auf dem Programm.</li>
 									<li>Danach teilen wir uns auf, um bei verschiedensten Workshops mitzumachen. Hier kannst du dann wählen zwischen Spielen, Malen, Basteln, Backen, Sport machen, Tanzen, Musik machen, und vielem mehr.</li>
-									<li>Anschließend treffen wir uns alle nochmals gemeinsam, um zu erfahren, was die anderen so gemacht haben und machen noch einige tolle Spiele, Singen oder Hören eine spannende Geschichte.</li><br>
+									<li>Anschließend treffen wir uns alle nochmals gemeinsam, um zu erfahren, was die anderen so erlebt haben. Wir machen noch einige tolle Spiele, singen oder hören eine spannende Geschichte.</li><br>
 									<p>An Eure Eltern haben wir natürlich auch gedacht!<br>
-									Vor dem Ende des Kidsdays öffnet das Elterncafé meistens um 15:30 Uhr. Hier können Sie noch einen leckeren Kaffee genießen und kurz vor dem Ende dann zu Euch stoßen, um zu schauen, was ihr alles beim Kidsday erlebt habt!</p>
-									<p>Na, hast DU Lust bekommen, mal bei uns vorbeizuschauen? Gerne kannst DU auch DEINE Geschwister, Freunde mitbringen.</p>
+									Vor dem Ende des KidsDays öffnet das Elterncafé um 15:30 Uhr. Hier können Sie einen leckeren Kaffee genießen und kurz vor dem Ende dann zu Euch stoßen, um zu schauen, was ihr alles beim KidsDay erlebt habt!</p>
+									<p>Na, hast DU Lust bekommen, mal bei uns vorbeizuschauen? Gerne kannst DU auch DEINE Geschwister und Freunde mitbringen.</p>
 									<p>Wir würden uns tierisch freuen, DICH zu sehen und kennenzulernen!</p>
 									</div>
 								</div>
 							</div>
 							<div class="wrapper spotlight style3 alt">
 								<div class="inner">
-									<img src="images/kidsday_leader.jpg" class="image">
+									<img src="images/KidsDay_leader.jpg" class="image">
 									<div class="content">
 										<h3>Und das Leitungsteam?</h3>
 										<p>Das besteht aus uns, Sarah und Yanina.</p>
-										<p>Falls ihr Fragen habt, könnt ihr uns gerne unter unserer Email kontaktieren: </p>
-										<p><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></p>
+										<p>Falls ihr Fragen habt, könnt ihr uns gerne eine Mail schicken: </p>
+										<p><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></p>
 								</div>
 							</div>
 
@@ -84,18 +84,18 @@
 					<div class="inner">
 						<ul class="contact">
 							<li class="fa-home">
-								Kidsday Karlsruhe<br />
+								KidsDay Karlsruhe<br />
 								Winterstraße 29<br />
 								76137 Karlsruhe
 							</li>
-							<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
-							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+							<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
+							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
 							<li class="fa-institution">
-								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
 								<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
