--- a/wannwo.html
+++ b/wannwo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Wann und wo findet der nächste Kidsday statt?</title>
+		<title>Wann und wo findet der nächste KidsDay statt?</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 				<header id="header" class>
-					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
+					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> KidsDay Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
 					</nav>
@@ -27,9 +27,9 @@
 					<div class="inner">
 						<h2>Menü</h2>
 						<ul class="links">
-							<li><a href="index.html">Willkommen beim Kidsday</a></li>
+							<li><a href="index.html">Willkommen beim KidsDay</a></li>
 							<li><a href="infos.html">Informationen</a></li>
-							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
+							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
@@ -41,8 +41,8 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Kontakt:</h2>
-								<p>Wann und wo findet der nächste Kidsday statt?</p>
+								<h2>Location:</h2>
+								<p>Wann und wo findet der nächste KidsDay statt?</p>
 							</div>
 						</header>
 
@@ -53,17 +53,17 @@
 									<article>
 										<section class="box feature">
 											<header>
-												<h3>Der nächste Kidsday findet am 20.05.2017,
+												<h3>Der nächste KidsDay findet am 20.05.2017,
 													in <script>var eventdate = new Date("May 20, 2017 12:00:00 GMT");
                                                     d=new Date();
                                                     count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                                     count=Math.floor(count/(60*60*24));
                                                     document.write(count);</script> Tagen, <br>
-													in der Winterstraße 29, Karlsruhe Südstadt statt.</h3>
+													in der Winterstraße 29, 76137 Karlsruhe statt.</h3>
 											</header>
 											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2617.6432951087154!2d8.405377015960545!3d48.998345279301404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797063ffe94aab1%3A0x7be5d6c006d19ec4!2sWinterstra%C3%9Fe+29%2C+76137+Karlsruhe!5e0!3m2!1sen!2sde!4v1481024630263" height="450" width=100% frameborder="0" style="border:0" allowfullscreen></iframe>
 											<header>
-												<p>In der Winterstraße 29, Karlsruhe Südstadt</p>
+												<p>In der Winterstraße 29, 76137 Karlsruhe Südstadt</p>
 											</header>
 										</section>
 									</article>
@@ -78,18 +78,18 @@
 					<div class="inner">
 						<ul class="contact">
 							<li class="fa-home">
-								Kidsday Karlsruhe<br />
+								KidsDay Karlsruhe<br />
 								Winterstraße 29<br />
 								76137 Karlsruhe
 							</li>
-							<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
-							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+							<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
+							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
 							<li class="fa-institution">
-								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
 								<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
