--- a/bilder.html
+++ b/bilder.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
+					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> KidsDay Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
 					</nav>
@@ -27,9 +27,9 @@
 					<div class="inner">
 						<h2>Menü</h2>
 						<ul class="links">
-							<li><a href="index.html">Willkommen beim Kidsday</a></li>
+							<li><a href="index.html">Willkommen beim KidsDay</a></li>
 							<li><a href="infos.html">Informationen</a></li>
-							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
+							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
@@ -41,14 +41,14 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Bilder der letzten Kidsdays!</h2>
+								<h2>Bilder der letzten KidsDays!</h2>
 							</div>
 						</header>
 
 						<!-- Content -->
 						<div id = "gallery">
 						<section id = "one" class = "wrapper spotlight style1">
-							<h2>Hier gibt's die Bilder vom letzten Kidsday am 11. März 2017:</h2>
+							<h2>Hier gibt's die Bilder vom letzten KidsDay am 11. März 2017:</h2>
 								<center>
 									<a href="images/fulls/2017_03_01.jpg" class="pic"><img src="images/thumbs/2017_03_01.jpg" alt="" data-max-height ="232"/></a>
 									<a href="images/fulls/2017_03_02.jpg" class="pic"><img src="images/thumbs/2017_03_02.jpg" alt="" height ="232"/></a>
@@ -63,7 +63,7 @@
 								</center>
 						</section>
 						<section id ="two" class = "wrapper spotlight style2 alt">
-							<h2>Hier gibt's die Bilder vom Kidsday im Juni 2016:</h2>
+							<h2>Hier gibt's die Bilder vom KidsDay im Juni 2016:</h2>
 								<center>
 									<a href="images/fulls/01.jpg" class="pic"><img src="images/thumbs/01.jpg" alt="" height ="232"/></a>
 									<a href="images/fulls/02.jpg" class="pic"><img src="images/thumbs/02.jpg" alt="" height ="232"/></a>
@@ -88,18 +88,18 @@
 					<div class="inner">
 						<ul class="contact">
 							<li class="fa-home">
-								Kidsday Karlsruhe<br />
+								KidsDay Karlsruhe<br />
 								Winterstraße 29<br />
 								76137 Karlsruhe
 							</li>
-							<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
-							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+							<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
+							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
 							<li class="fa-institution">
-								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
 								<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
