--- a/spenden.html
+++ b/spenden.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Spenden für den Kidsday</title>
+		<title>Spenden für den KidsDay</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 				<header id="header" class>
-					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> Kidsday Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
+					<h1><a href="index.html"><img alt="logo" src="assets/css/images/hand_blau.svg" height="24"> KidsDay Karlsruhe <img alt="logo" src="assets/css/images/hand_gruen.svg" height="24"></a></h1>
 					<nav>
 						<a href="#menu">Menü</a>
 					</nav>
@@ -27,9 +27,9 @@
 					<div class="inner">
 						<h2>Menü</h2>
 						<ul class="links">
-							<li><a href="index.html">Willkommen beim Kidsday</a></li>
+							<li><a href="index.html">Willkommen beim KidsDay</a></li>
 							<li><a href="infos.html">Informationen</a></li>
-							<li><a href="wannwo.html">Wann und wo ist der Kidsday?</a></li>
+							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
 						</ul>
@@ -80,18 +80,18 @@
 					<div class="inner">
 						<ul class="contact">
 							<li class="fa-home">
-								Kidsday Karlsruhe<br />
+								KidsDay Karlsruhe<br />
 								Winterstraße 29<br />
 								76137 Karlsruhe
 							</li>
-							<li class="fa-envelope"><a href="mailto:info@kidsday-karlsruhe.de">info@kidsday-karlsruhe.de</a></li>
-							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">Kidsday Karlsruhe @ Facebook</a></li>
+							<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
+							<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
 							<li class="fa-institution">
-								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a><br />
+								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
 								<a href="http://nehemia-initiative.de/"><img src="assets/css/images/nehemia_logo.svg" height="128"><br /></a>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative e.V.</a></li>
+							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
