--- a/index.html
+++ b/index.html
@@ -57,13 +57,15 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>-->
 									<div class="content">
 										<h2 class="major">Wann wird der nächste KidsDay stattfinden?</h2>
-										<p>Der nächste KidsDay findet am 20.05.2017,
+										<!--<p>Der nächste KidsDay findet am 20.05.2017,
 											in <script>var eventdate = new Date("May 20, 2017 12:00:00 GMT");
                                             d=new Date();
                                             count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                             count=Math.floor(count/(60*60*24));
                                             document.write(count);</script> Tagen, <br>
-											in der Winterstraße 29, 76137 Karlsruhe statt.</p>
+											in der Winterstraße 29, 76137 Karlsruhe statt.</p>-->
+										<p>Der nächste Kidsday am 20.05. fällt leider aus...</p>
+										<p>Ob der Kidsday darauf im Oktober stattfinden wird, werden wir hier schreiben.</p>
 										<a href="wannwo.html" class="special">Location</a>
 									</div>
 								</div>
