Fixed an image link

--- a/infos.html
+++ b/infos.html
@@ -68,7 +68,7 @@
 							</div>
 							<div class="wrapper spotlight style3 alt">
 								<div class="inner">
-									<img src="images/KidsDay_leader.jpg" class="image">
+									<img src="images/kidsday_leader.jpg" class="image">
 									<div class="content">
 										<h3>Und das Leitungsteam?</h3>
 										<p>Das besteht aus uns, Sarah und Yanina.</p>
