Fixed some font placement

--- a/wannwo.html
+++ b/wannwo.html
@@ -41,8 +41,7 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Location:</h2>
-								<p>Wann und wo findet der nächste KidsDay statt?</p>
+								<h2>Location und Zeit:</h2>
 							</div>
 						</header>
 
@@ -60,7 +59,8 @@
                                                     count=Math.floor(count/(60*60*24));
                                                     document.write(count);</script> Tagen, <br>
 													in der Winterstraße 29, 76137 Karlsruhe statt.</h3>-->
-												<h3>Der nächste Kidsday am 20.05. fällt leider aus...</h3>
+												<h3>Wann und wo findet der nächste KidsDay statt?</h3>
+												<h2>Der nächste Kidsday am 20.05. fällt leider aus...</h2>
 												<p>Ob der Kidsday darauf im Oktober stattfinden wird, werden wir hier schreiben.</p>
 											</header>
 											<header><h3>Anfahrt:</h3></header>
