Changed the date for the next kidsday.

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<h2><center>Willkommen beim:</center></h2>
 							<!--<div class="logo"><img alt="logo" src="assets/css/images/hand_blau.svg" width="64" height="64"><img alt="logo" src="assets/css/images/hand_gruen.svg" width="64" height="64"></div>-->
 							<h2><center><a href="#"><img alt="logo" src="assets/css/images/Logo_alt.png" height="196"></a></center></h2>
-							<center<p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></p></center>
+							<center><p>ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></p></center>
 							<!--<img src="assets/css/images/nehemia_logo.svg" width="152" height="64">-->
 						</div>
 					</section>
@@ -57,15 +57,14 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>-->
 									<div class="content">
 										<h2 class="major">Wann wird der nächste KidsDay stattfinden?</h2>
-										<!--<p>Der nächste KidsDay findet am 20.05.2017,
-											in <script>var eventdate = new Date("May 20, 2017 12:00:00 GMT");
+										<h3>Der nächste KidsDay findet am 23.06.2018,
+											in <script>var eventdate = new Date("June 23, 2018 12:00:00 GMT");
                                             d=new Date();
                                             count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                             count=Math.floor(count/(60*60*24));
                                             document.write(count);</script> Tagen, <br>
-											in der Winterstraße 29, 76137 Karlsruhe statt.</p>-->
-										<p>Der nächste Kidsday am 20.05. fällt leider aus...</p>
-										<p>Ob der Kidsday darauf im Oktober stattfinden wird, werden wir hier schreiben.</p>
+											in der Winterstraße 29, 76137 Karlsruhe statt.</h3>
+										<p>Genaueres hier:</p>
 										<a href="wannwo.html" class="special">Location</a>
 									</div>
 								</div>
