--- a/wannwo.html
+++ b/wannwo.html
@@ -52,16 +52,14 @@
 									<article>
 										<section class="box feature">
 											<header>
-												<!--<h3>Der nächste KidsDay findet am 20.05.2017,
-													in <script>var eventdate = new Date("May 20, 2017 12:00:00 GMT");
+												<h3>Wann und wo findet der nächste KidsDay statt?</h3>
+												<h2>Der nächste KidsDay findet am 23.06.2018,
+													in <script>var eventdate = new Date("June 23, 2018 12:00:00 GMT");
                                                     d=new Date();
                                                     count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                                     count=Math.floor(count/(60*60*24));
                                                     document.write(count);</script> Tagen, <br>
-													in der Winterstraße 29, 76137 Karlsruhe statt.</h3>-->
-												<h3>Wann und wo findet der nächste KidsDay statt?</h3>
-												<h2>Der nächste Kidsday am 20.05. fällt leider aus...</h2>
-												<p>Ob der Kidsday darauf im Oktober stattfinden wird, werden wir hier schreiben.</p>
+													in der Winterstraße 29, 76137 Karlsruhe statt.</h2>
 											</header>
 											<header><h3>Anfahrt:</h3></header>
 											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2617.6432951087154!2d8.405377015960545!3d48.998345279301404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797063ffe94aab1%3A0x7be5d6c006d19ec4!2sWinterstra%C3%9Fe+29%2C+76137+Karlsruhe!5e0!3m2!1sen!2sde!4v1481024630263" height="450" width=100% frameborder="0" style="border:0" allowfullscreen></iframe>
