Added Openstreetmaps instead of Googlemaps because of data rights updates.

--- a/wannwo.html
+++ b/wannwo.html
@@ -62,8 +62,8 @@
 													in der Winterstraße 29, 76137 Karlsruhe statt.</h2>
 											</header>
 											<header><h3>Anfahrt:</h3></header>
-											<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2617.6432951087154!2d8.405377015960545!3d48.998345279301404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797063ffe94aab1%3A0x7be5d6c006d19ec4!2sWinterstra%C3%9Fe+29%2C+76137+Karlsruhe!5e0!3m2!1sen!2sde!4v1481024630263" height="450" width=100% frameborder="0" style="border:0" allowfullscreen></iframe>
-											<header>
+											<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2617.6432951087154!2d8.405377015960545!3d48.998345279301404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797063ffe94aab1%3A0x7be5d6c006d19ec4!2sWinterstra%C3%9Fe+29%2C+76137+Karlsruhe!5e0!3m2!1sen!2sde!4v1481024630263" height="450" width=100% frameborder="0" style="border:0" allowfullscreen></iframe>-->
+											<iframe src="https://www.openstreetmap.org/export/embed.html?bbox=8.40583384037018%2C48.997617125877774%2C8.409374356269838%2C48.99912170789577&amp;layer=mapnik&amp;marker=48.998369422567855%2C8.407604098320007" height="450" width=100% frameborder="0" style="border:0"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=48.99837&amp;mlon=8.40760#map=19/48.99837/8.40760">Hier klicken um eine größere Karte zu bekommen.</a></small><header>
 												<p>In der Winterstraße 29, 76137 Karlsruhe Südstadt</p>
 											</header>
 										</section>
