Added "Impressum" and "Datenschutzerklärung"

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 								<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 								<li><a href="bilder.html">Bilder</a></li>
 								<li><a href="spenden.html">Spenden</a></li>
+								<li><a href="impressum.html">Impressum</a></li>
+								<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 							</ul>
 							<a href="#" class="close">Schließen</a>
 						</div>
@@ -57,12 +59,12 @@
 									<!--<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>-->
 									<div class="content">
 										<h2 class="major">Wann wird der nächste KidsDay stattfinden?</h2>
-										<h3>Der nächste KidsDay findet am 13.10.2018,
-											in <script>var eventdate = new Date("October 10, 2018 12:00:00 GMT");
+										<h3>Der letzte KidsDay fand am 13.10.2018,
+											<!--in <script>var eventdate = new Date("October 13, 2018 12:00:00 GMT");
                                             d=new Date();
                                             count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                             count=Math.floor(count/(60*60*24));
-                                            document.write(count);</script> Tagen, <br>
+                                            document.write(count);</script> Tagen, <br>-->
 											in der Winterstraße 29, 76137 Karlsruhe statt.</h3>
 										<p>Genaueres hier:</p>
 										<a href="wannwo.html" class="special">Location</a>
@@ -136,6 +138,7 @@
 								<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 								<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 								<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+								<li><a href="impressum.html">Impressum</a></li>
 							</ul>
 						</div>
 					</section>
