--- a/impressum.html
+++ b/impressum.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Was ist der KidsDay?</title>
+		<title>Datenschutzerklärung</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -43,39 +43,37 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Was ist der KidsDay?</h2>
-								<p>Ein toller Tag für Kinder!</p>
+								<h2>Datenschutzerklärung</h2>
 							</div>
 						</header>
 
 						<!-- Content -->
-							<div class="wrapper spotlight style2">
+							<div class="wrapper">
 								<div class="inner">
-									<a href="#" class="image"><img src="assets/css/images/bearface.jpg" alt="" /></a>
-									<div class="content">
-									<h3>Ihr fragt euch sicher: <i>"Was ist denn bitte der KidsDay?"</i></h3>
-										<p>Nun ja, diese Frage ist recht einfach zu beantworten. Der KidsDay lädt DICH ganz herzlich ein! <br>
-										Der KidsDay ist ein toller Tag für Kinder im Alter von 4- 10 Jahren. Er findet ca. alle 2 Monate in der Karlsruher Südstadt, Winterstraße 29, an einem Samstag statt.</p>
-									<p>Du kannst gespannt sein, was DICH erwartet:</p>
-									<li>Wir treffen uns zuerst alle gemeinsam, um zu singen, zu tanzen und um eine Geschichte zu hören.</li>
-									<li>Dann stehen ein leckeres Mittagessen und einige Spiele auf dem Programm.</li>
-									<li>Danach teilen wir uns auf, um bei verschiedensten Workshops mitzumachen. Hier kannst du dann wählen zwischen Spielen, Malen, Basteln, Backen, Sport machen, Tanzen, Musik machen, und vielem mehr.</li>
-									<li>Anschließend treffen wir uns alle nochmals gemeinsam, um zu erfahren, was die anderen so erlebt haben. Wir machen noch einige tolle Spiele, singen oder hören eine spannende Geschichte.</li><br>
-									<p>An Eure Eltern haben wir natürlich auch gedacht!<br>
-									Vor dem Ende des KidsDays öffnet das Elterncafé um 15:30 Uhr. Hier können Sie einen leckeren Kaffee genießen und kurz vor dem Ende dann zu Euch stoßen, um zu schauen, was ihr alles beim KidsDay erlebt habt!</p>
-									<p>Na, hast DU Lust bekommen, mal bei uns vorbeizuschauen? Gerne kannst DU auch DEINE Geschwister und Freunde mitbringen.</p>
-									<p>Wir würden uns tierisch freuen, DICH zu sehen und kennenzulernen!</p>
-									</div>
-								</div>
-							</div>
-							<div class="wrapper spotlight style3 alt">
-								<div class="inner">
-									<img src="images/kidsday_leader.jpg" class="image">
-									<div class="content">
-										<h3>Und das Leitungsteam?</h3>
-										<p>Das besteht aus uns, Sarah und Yanina.</p>
-										<p>Falls ihr Fragen habt, könnt ihr uns gerne eine Mail schicken: </p>
-										<p><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></p>
+
+									<article>
+										<h3>Impressum</h3>
+										<h3>Angaben gemäß § 5 TMG:</h3>
+										<p>Nehemia Initiative Karlsruhe e. V.<br>
+										Winterstraße 29<br>
+											76137 Karlsruhe<br></p>
+
+										<h4>Vertreten durch (Alleinvertretungsbefugnis):</h4>
+										<p>1. Vorsitzender:<br>
+										Friedemann Kalmbach, Winterstr. 29, 76137 Karlsruhe<br>
+										Telefon: 0721 91434715<br>
+											E-Mail: kalmbach[ad]nehemia-initiative.de<br></p>
+
+										<h4>Registereintrag:</h4>
+										<p>Registergericht: Vereinsregister der Stadt Karlsruhe<br>
+											Registernummer: VR 1547<br></p>
+										<h3>Verantwortlich für den Inhalt (Webmaster) nach § 55 Abs. 2 RStV:</h3>
+										<p>Jens Burkard<br>
+										Viktoriastr. 14<br>
+										04317 Leipzig<br>
+										jens.burkard@protonmail.com</p>
+									</article>
+
 								</div>
 							</div>
 
