--- a/spenden.html
+++ b/spenden.html
@@ -32,6 +32,8 @@
 							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
+							<li><a href="impressum.html">Impressum</a></li>
+							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
 						<a href="#" class="close">Schließen</a>
 					</div>
@@ -94,6 +96,7 @@
 							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+							<li><a href="impressum.html">Impressum</a></li>
 						</ul>
 					</div>
 				</section>
