--- a/wannwo.html
+++ b/wannwo.html
@@ -32,6 +32,8 @@
 							<li><a href="wannwo.html">Wann und wo ist der KidsDay?</a></li>
 							<li><a href="bilder.html">Bilder</a></li>
 							<li><a href="spenden.html">Spenden</a></li>
+							<li><a href="impressum.html">Impressum</a></li>
+							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
 						</ul>
 						<a href="#" class="close">Schließen</a>
 					</div>
@@ -53,16 +55,15 @@
 										<section class="box feature">
 											<header>
 												<h3>Wann und wo findet der nächste KidsDay statt?</h3>
-												<h2>Der nächste KidsDay findet am 13.10.2018,
-													in <script>var eventdate = new Date("October 13, 2018 12:00:00 GMT");
+												<h2>Der letzte KidsDay war am 13.10.2018,
+													<!--in <script>var eventdate = new Date("October 13, 2018 12:00:00 GMT");
                                                     d=new Date();
                                                     count=Math.floor((eventdate.getTime()-d.getTime())/1000);
                                                     count=Math.floor(count/(60*60*24));
-                                                    document.write(count);</script> Tagen, <br>
-													in der Winterstraße 29, 76137 Karlsruhe statt.</h2>
+                                                    document.write(count);</script> Tagen, <br>-->
+													in der Winterstraße 29, 76137 Karlsruhe.</h2>
 											</header>
 											<header><h3>Anfahrt:</h3></header>
-											<!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2617.6432951087154!2d8.405377015960545!3d48.998345279301404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4797063ffe94aab1%3A0x7be5d6c006d19ec4!2sWinterstra%C3%9Fe+29%2C+76137+Karlsruhe!5e0!3m2!1sen!2sde!4v1481024630263" height="450" width=100% frameborder="0" style="border:0" allowfullscreen></iframe>-->
 											<iframe src="https://www.openstreetmap.org/export/embed.html?bbox=8.40583384037018%2C48.997617125877774%2C8.409374356269838%2C48.99912170789577&amp;layer=mapnik&amp;marker=48.998369422567855%2C8.407604098320007" height="450" width=100% frameborder="0" style="border:0"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=48.99837&amp;mlon=8.40760#map=19/48.99837/8.40760">Hier klicken um eine größere Karte zu bekommen.</a></small><header>
 												<p>In der Winterstraße 29, 76137 Karlsruhe Südstadt</p>
 											</header>
@@ -93,6 +94,7 @@
 							<li>&copy; 2017 <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a></li>
 							<li>Design: <a href="http://github.com/jtheb">JtheB</a></li>
 							<li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+							<li><a href="impressum.html">Impressum</a></li>
 						</ul>
 					</div>
 				</section>
