--- a/wannwo.html
+++ b/wannwo.html
@@ -55,13 +55,13 @@
 										<section class="box feature">
 											<header>
 												<h3>Wann und wo findet der nächste KidsDay statt?</h3>
-												<h2>Der letzte KidsDay war am 13.10.2018,
-													<!--in <script>var eventdate = new Date("October 13, 2018 12:00:00 GMT");
-                                                    d=new Date();
-                                                    count=Math.floor((eventdate.getTime()-d.getTime())/1000);
-                                                    count=Math.floor(count/(60*60*24));
-                                                    document.write(count);</script> Tagen, <br>-->
-													in der Winterstraße 29, 76137 Karlsruhe.</h2>
+												<h2>Der nächste KidsDay findet am 09.02.2019, in
+                                                <script>var eventdate = new Date("February 9, 2019 12:00:00 GMT");
+                                                d=new Date();
+                                                count=Math.floor((eventdate.getTime()-d.getTime())/1000);
+                                                count=Math.floor(count/(60*60*24));
+                                                document.write(count);</script> Tagen, <br>
+                                                in der Winterstraße 29, 76137 Karlsruhe statt.</h2>
 											</header>
 											<header><h3>Anfahrt:</h3></header>
 											<iframe src="https://www.openstreetmap.org/export/embed.html?bbox=8.40583384037018%2C48.997617125877774%2C8.409374356269838%2C48.99912170789577&amp;layer=mapnik&amp;marker=48.998369422567855%2C8.407604098320007" height="450" width=100% frameborder="0" style="border:0"></iframe><br/><small><a href="https://www.openstreetmap.org/?mlat=48.99837&amp;mlon=8.40760#map=19/48.99837/8.40760">Hier klicken um eine größere Karte zu bekommen.</a></small><header>
