--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 								<!--<li class="fa-phone">(000) 000-0000</li>-->
 								<li class="fa-envelope"><a href="mailto:info@KidsDay-karlsruhe.de">info@KidsDay-karlsruhe.de</a></li>
 								<!--<li class="fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>-->
-								<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>
+								<!--<li class="fa-facebook"><a href="https://www.facebook.com/groups/361511900534275/">KidsDay Karlsruhe @ Facebook</a></li>-->
 								<!--<li class="fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>-->
 								<li class="fa-institution">
 								ein Projekt der <a href="http://nehemia-initiative.de/">Nehemia Initiative Karlsruhe e.V.</a><br />
